--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
                 </div>
                 <div class="box-2 box-common-class">
                     <div class="d-flex gap-10 align-items-center">
-                        <a href="https://www.trustpilot.com/"> <svg width="54" height="55" viewBox="0 0 54 55" fill="none"
-                                xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                        <a href="https://www.trustpilot.com/"> <svg width="54" height="55" viewBox="0 0 54 55"
+                                fill="none" xmlns="http://www.w3.org/2000/svg"
+                                xmlns:xlink="http://www.w3.org/1999/xlink">
                                 <rect y="0.702148" width="53.3333" height="53.3333" fill="url(#pattern0_87690_1375)" />
                                 <defs>
                                     <pattern id="pattern0_87690_1375" patternContentUnits="objectBoundingBox" width="1"
@@ -157,7 +158,8 @@
                             </svg>
                         </a>
                         <div>
-                            <h3 class="font-family-second fw-normal lh-19 fs-sm mb-0 sooty-black">Trust Pilot Review</h3>
+                            <h3 class="font-family-second fw-normal lh-19 fs-sm mb-0 sooty-black">Trust Pilot Review
+                            </h3>
                             <div class="d-flex align-items-center">
                                 <h4 class="font-family-second fw-normal fs-5 lh-32 mb-0 sooty-black">4.6</h4>
                                 <svg width="84" height="18" viewBox="0 0 84 18" fill="none"
@@ -189,6 +191,13 @@
             </div>
         </div>
     </header>
+    <!--***** What we do *****-->
+    <section class="d-flex justify-content-center align-items-center pt-174 pb-140">
+        <div class="container max-w-1140">
+            <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-56">What We Do</h2>
+            <div class="row" id="cardsContainer"></div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
