--- a/index.html
+++ b/index.html
@@ -198,6 +198,79 @@
             <div class="row" id="cardsContainer"></div>
         </div>
     </section>
+    <!--***** Why Choose us *****-->
+    <section class="d-flex justify-content-center align-items-center py-100 bg-light-red">
+        <div class="container max-w-1140">
+            <div class="row">
+                <div class="col-lg-7 col-12 mb-5 mb-lg-0 d-flex justify-content-center">
+                    <div>
+                        <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black mb-20 text-center text-lg-start">Why Choose Us?</h2>
+                        <p class="font-family-primary fw-normal fs-md lh-28 text-black mb-32 max-w-590 text-lg-start text-center">Lörem ipsum koda astrobel:
+                            sutaveligen. Rodod bänera viliga. Pregigt primasofi dede facebooka: förutom tivaligt.</p>
+                        <div class="d-flex gap-20 mb-4 justify-content-center justify-content-lg-start">
+                            <div class="circle-box d-flex justify-content-center align-items-center">
+                                <svg width="27" height="26" viewBox="0 0 27 26" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M13.5 20.0358L5.5 24.0358L7.5 16.0358L1.5 9.36914L10.1667 8.70247L13.5 1.36914L16.8333 8.70247L25.5 9.36914L19.5 16.0358L21.5 24.0358L13.5 20.0358Z"
+                                        stroke="#FF0000" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-12">High
+                                    Quality
+                                    Materials</h3>
+                                <p class="font-family-primary fw-normal fs-6 lh-25 text-black max-w-370 mb-0">Es ist ein
+                                    lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-20 mb-4 justify-content-center justify-content-lg-start">
+                            <div class="circle-box d-flex justify-content-center align-items-center">
+                                <svg width="25" height="26" viewBox="0 0 25 26" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.16634 10.7028V24.0361M7.16634 10.7028L1.83301 10.7028V24.0361L7.16634 24.0361M7.16634 10.7028L14.0938 2.62077C14.7511 1.85387 15.7853 1.52419 16.7652 1.76916L16.8286 1.78502C18.6177 2.23227 19.4236 4.31689 18.4007 5.85126L15.1663 10.7028H21.2469C22.9297 10.7028 24.1918 12.2423 23.8617 13.8924L22.2617 21.8924C22.0125 23.1389 20.918 24.0361 19.6469 24.0361L7.16634 24.0361"
+                                        stroke="#FF0000" stroke-width="2.0625" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-12">Durability
+                                    with Warranty</h3>
+                                <p class="font-family-primary fw-normal fs-6 lh-25 text-black max-w-370 mb-0">Es ist ein
+                                    lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex gap-20 mb-36 justify-content-center justify-content-lg-start">
+                            <div class="circle-box d-flex justify-content-center align-items-center">
+                                <svg width="27" height="27" viewBox="0 0 27 27" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M16.8333 6.03581C17.8162 6.22757 18.7919 6.66104 19.5 7.36914C20.2081 8.07724 20.6416 9.05293 20.8333 10.0358M17.5 1.36914C19.542 1.59599 21.3796 2.5839 22.8333 4.03581C24.2871 5.48771 25.2706 7.32739 25.5 9.36914M25.4992 19.338V22.9511C25.5048 24.3322 24.2629 25.4855 22.8685 25.3597C10.8333 25.3691 1.5 15.9491 1.50942 3.99472C1.38383 2.60774 2.53143 1.37055 3.91081 1.36926H7.531C8.11663 1.3635 8.68438 1.57048 9.12842 1.9516C10.3908 3.03513 11.2028 6.71284 10.8904 8.17485C10.6465 9.31629 9.49587 10.1149 8.71359 10.8956C10.4314 13.9107 12.9329 16.4072 15.954 18.1216C16.7362 17.3409 17.5364 16.1926 18.6801 15.9491C20.1473 15.6368 23.8486 16.45 24.9278 17.7212C25.3105 18.172 25.5139 18.7474 25.4992 19.338Z"
+                                        stroke="#FF0000" stroke-width="2" stroke-linecap="round"
+                                        stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                            <div>
+                                <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-12">24/7
+                                    Support
+                                </h3>
+                                <p class="font-family-primary fw-normal fs-6 lh-25 text-black max-w-370 mb-0">Es ist ein
+                                    lang erwiesener Fakt, dass ein Leser vom Text abgelenkt wird.</p>
+                            </div>
+                        </div>
+                        <div class="d-flex justify-content-center justify-content-lg-start">
+                        <button class="get-btn border-0 font-family-primary fw-bold fs-md lh-22 text-white bg-red">Get a
+                            Quote</button></div>
+                    </div>
+                </div>
+                <div class="col-lg-5 col-12 d-flex justify-content-center">
+                    <img src="./assets/images/png/section-3-img.png" alt="section-3-img" class="w-100 max-w-549">
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
