--- a/index.html
+++ b/index.html
@@ -204,8 +204,12 @@
             <div class="row">
                 <div class="col-lg-7 col-12 mb-5 mb-lg-0 d-flex justify-content-center">
                     <div>
-                        <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black mb-20 text-center text-lg-start">Why Choose Us?</h2>
-                        <p class="font-family-primary fw-normal fs-md lh-28 text-black mb-32 max-w-590 text-lg-start text-center">Lörem ipsum koda astrobel:
+                        <h2
+                            class="font-family-primary fw-semibold fs-lg lh-70 text-black mb-20 text-center text-lg-start">
+                            Why Choose Us?</h2>
+                        <p
+                            class="font-family-primary fw-normal fs-md lh-28 text-black mb-32 max-w-590 text-lg-start text-center">
+                            Lörem ipsum koda astrobel:
                             sutaveligen. Rodod bänera viliga. Pregigt primasofi dede facebooka: förutom tivaligt.</p>
                         <div class="d-flex gap-20 mb-4 justify-content-center justify-content-lg-start">
                             <div class="circle-box d-flex justify-content-center align-items-center">
@@ -261,14 +265,28 @@
                             </div>
                         </div>
                         <div class="d-flex justify-content-center justify-content-lg-start">
-                        <button class="get-btn border-0 font-family-primary fw-bold fs-md lh-22 text-white bg-red">Get a
-                            Quote</button></div>
+                            <button
+                                class="get-btn border-0 font-family-primary fw-bold fs-md lh-22 text-white bg-red">Get a
+                                Quote</button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-5 col-12 d-flex justify-content-center">
                     <img src="./assets/images/png/section-3-img.png" alt="section-3-img" class="w-100 max-w-549">
                 </div>
             </div>
+        </div>
+    </section>
+    <!--***** Our Blog *****-->
+    <section class="d-flex justify-content-center align-items-center py-140">
+        <div class="container max-w-1140">
+            <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-20">Our Blog</h2>
+            <div class="d-flex justify-content-center">
+                <p class="font-family-primary fw-normal fs-md lh-28 text-center color-Vantablack max-w-592 mb-56">Lörem
+                    ipsum koda astrobel: sutaveligen. Rodod bänera viliga. Pregigt primasofi dede facebooka: förutom
+                    tivaligt. Fejkade</p>
+            </div>
+            <div class="row" id="blog-container"></div>
         </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
