--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!--***** header *****-->
-    <header class="d-flex justify-content-center align-items-center flex-column bg-img pb-4">
+    <header class="d-flex justify-content-center align-items-center flex-column bg-img mb-174">
         <nav class="py-24 w-100">
             <div class="container max-w-1140 bg-white border-radius-24">
                 <div class="d-flex align-items-center justify-content-between w-100 py-16">
@@ -82,7 +82,7 @@
                 nyheter eurosamma sol: teroktig,</p>
             <button class="get-btn border-0 font-family-primary fw-bold fs-md lh-22 text-white bg-red mb-72">Get a
                 Quote</button>
-            <div class="d-flex gap-4 flex-wrap">
+            <div class="d-flex gap-4 flex-wrap mb-4">
                 <div class="box box-common-class">
                     <div class="d-flex gap-10 align-items-center">
                         <a href="https://www.google.co.in/"> <svg width="41" height="41" viewBox="0 0 41 41" fill="none"
@@ -192,7 +192,7 @@
         </div>
     </header>
     <!--***** What we do *****-->
-    <section class="d-flex justify-content-center align-items-center pt-174 pb-140">
+    <section class="d-flex justify-content-center align-items-center pb-140">
         <div class="container max-w-1140">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-56">What We Do</h2>
             <div class="row" id="cardsContainer"></div>
@@ -290,7 +290,7 @@
         </div>
     </section>
     <!--***** Frequently Asked Questions *****-->
-    <section class="faq d-flex justify-content-center align-items-center py-140">
+    <section class="faq d-flex justify-content-center align-items-center pb-140">
         <div class="container max-w-1140">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black mb-20 text-center">Frequently Asked
                 Questions</h2>
