We provide services in these areas section done

--- a/index.html
+++ b/index.html
@@ -389,6 +389,57 @@
             </div>
         </div>
     </section>
+    <!--***** We provide services in these areas *****-->
+    <section class="d-flex justify-content-center align-items-center pb-120">
+        <div class="container max-w-1140">
+            <div class="d-flex justify-content-center justify-content-lg-start">
+                <h2
+                    class="font-family-primary fw-semibold fs-lg lh-70 text-black max-w-589 mb-20 text-center text-lg-start">
+                    We provide services in
+                    these areas</h2>
+            </div>
+            <div class="d-flex justify-content-center justify-content-lg-start">
+                <p
+                    class="font-family-primary fw-normal text-center text-lg-start fs-md lh-28 text-black max-w-592 mb-56">
+                    Lörem ipsum koda
+                    astrobel: sutaveligen. Rodod bänera viliga. Pregigt primasofi dede facebooka: förutom tivaligt.
+                    Fejkade</p>
+            </div>
+            <div class="row" id="location-container"></div>
+            <div class="row">
+                <div class="col-sm-6 col-12 mb-4 mx-auto d-flex justify-content-lg-end justify-content-center">
+                    <div class="location-card w-100">
+                        <div class="d-flex align-items-center gap-12">
+                            <div class="location-circle d-flex justify-content-center align-items-center">
+                                <svg width="23" height="27" viewBox="0 0 23 27" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M22.2754 8.93164C20.9629 3.15664 15.9254 0.556641 11.5004 0.556641C11.5004 0.556641 11.5004 0.556641 11.4879 0.556641C7.07536 0.556641 2.02536 3.14414 0.712863 8.91914C-0.749637 15.3691 3.20036 20.8316 6.77536 24.2691C8.10036 25.5441 9.80036 26.1816 11.5004 26.1816C13.2004 26.1816 14.9004 25.5441 16.2129 24.2691C19.7879 20.8316 23.7379 15.3816 22.2754 8.93164ZM11.5004 15.1941C9.32536 15.1941 7.56286 13.4316 7.56286 11.2566C7.56286 9.08164 9.32536 7.31914 11.5004 7.31914C13.6754 7.31914 15.4379 9.08164 15.4379 11.2566C15.4379 13.4316 13.6754 15.1941 11.5004 15.1941Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                            <p class="font-family-primary fw-semibold fs-4 lh-38 text-black mb-0">Knoxville</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-12 mb-4 mx-auto d-flex justify-content-lg-start justify-content-center">
+                    <div class="location-card w-100">
+                        <div class="d-flex align-items-center gap-12">
+                            <div class="location-circle d-flex justify-content-center align-items-center">
+                                <svg width="23" height="27" viewBox="0 0 23 27" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M22.2754 8.93164C20.9629 3.15664 15.9254 0.556641 11.5004 0.556641C11.5004 0.556641 11.5004 0.556641 11.4879 0.556641C7.07536 0.556641 2.02536 3.14414 0.712863 8.91914C-0.749637 15.3691 3.20036 20.8316 6.77536 24.2691C8.10036 25.5441 9.80036 26.1816 11.5004 26.1816C13.2004 26.1816 14.9004 25.5441 16.2129 24.2691C19.7879 20.8316 23.7379 15.3816 22.2754 8.93164ZM11.5004 15.1941C9.32536 15.1941 7.56286 13.4316 7.56286 11.2566C7.56286 9.08164 9.32536 7.31914 11.5004 7.31914C13.6754 7.31914 15.4379 9.08164 15.4379 11.2566C15.4379 13.4316 13.6754 15.1941 11.5004 15.1941Z"
+                                        fill="white" />
+                                </svg>
+                            </div>
+                            <p class="font-family-primary fw-semibold fs-4 lh-38 text-black mb-0">Sevierville</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
