--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         class="d-flex mb-0 align-items-center nav-link list-unstyled justify-content-center justify-content-lg-between w-100">
                         <li>
                             <a href="#">
-                                <img class="d-none" src="" alt="nav-logo"></a>
+                                <img class="d-none" src="./assets/images/svg/nav-logo.svg" alt="nav-logo"></a>
                         </li>
                         <li>
                             <ul
@@ -51,7 +51,7 @@
                             <ul class="d-flex list-unstyled mb-0">
                                 <li class="d-flex align-items-center justify-content-center mt-4 mt-lg-0">
                                     <a class="nav-btn-box text-decoration-none d-flex align-items-center gap-10 font-family-primary fs-6 lh-20 fw-bold text-black"
-                                        href="tel: 865 621-1717">
+                                        href="tel:865621-1717">
                                         <svg width="25" height="25" viewBox="0 0 25 25" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path
@@ -440,6 +440,95 @@
             </div>
         </div>
     </section>
+    <!--***** footer *****-->
+    <footer>
+        <div class="container max-w-1140 mb-4">
+            <div class="row">
+                <div class="col-lg-2 col-sm-4 mb-4">
+                    <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="mb-20">
+                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-3" href="email:Help@Dealzip.com">
+                        <img src="./assets/images/svg/message-img.svg" alt="">
+                        <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">Help@Dealzip.com</p>
+                    </a>
+                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-4" href="email:Help@Dealzip.com">
+                        <img src="./assets/images/svg/mobile-img.svg" alt="tel:+123445667889">
+                        <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">+1 234 456 678 89</p>
+                    </a>
+                    <div class="d-flex gap-8">
+                        <a class="footer-link-circle bg-red d-flex justify-content-center align-items-center" href="">
+                            <svg width="11" height="21" viewBox="0 0 11 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M7 11.5215H9.5L10.5 7.52148H7V5.52148C7 4.49148 7 3.52148 9 3.52148H10.5V0.161484C10.174 0.118484 8.943 0.0214844 7.643 0.0214844C4.928 0.0214844 3 1.67848 3 4.72148V7.52148H0V11.5215H3V20.0215H7V11.5215Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a class="footer-link-circle bg-red d-flex justify-content-center align-items-center" href="">
+                            <svg width="21" height="21" viewBox="0 0 21 21" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M11.5276 0.369141C12.6526 0.372141 13.2236 0.378141 13.7166 0.392141L13.9106 0.399141C14.1346 0.407141 14.3556 0.417141 14.6226 0.429141C15.6866 0.479141 16.4126 0.647141 17.0496 0.894141C17.7096 1.14814 18.2656 1.49214 18.8216 2.04714C19.3301 2.54704 19.7236 3.15173 19.9746 3.81914C20.2216 4.45614 20.3896 5.18214 20.4396 6.24714C20.4516 6.51314 20.4616 6.73414 20.4696 6.95914L20.4756 7.15314C20.4906 7.64514 20.4966 8.21614 20.4986 9.34114L20.4996 10.0871V11.3971C20.5021 12.1265 20.4944 12.8559 20.4766 13.5851L20.4706 13.7791C20.4626 14.0041 20.4526 14.2251 20.4406 14.4911C20.3906 15.5561 20.2206 16.2811 19.9746 16.9191C19.7243 17.5869 19.3307 18.1918 18.8216 18.6911C18.3216 19.1995 17.7169 19.5929 17.0496 19.8441C16.4126 20.0911 15.6866 20.2591 14.6226 20.3091C14.3853 20.3203 14.148 20.3303 13.9106 20.3391L13.7166 20.3451C13.2236 20.3591 12.6526 20.3661 11.5276 20.3681L10.7816 20.3691H9.4726C8.74286 20.3717 8.01312 20.364 7.2836 20.3461L7.0896 20.3401C6.85221 20.3312 6.61487 20.3208 6.3776 20.3091C5.3136 20.2591 4.5876 20.0911 3.9496 19.8441C3.28227 19.5935 2.67782 19.2 2.1786 18.6911C1.66965 18.1914 1.27582 17.5867 1.0246 16.9191C0.777601 16.2821 0.6096 15.5561 0.5596 14.4911C0.548459 14.2539 0.538459 14.0165 0.5296 13.7791L0.524601 13.5851C0.506173 12.856 0.497838 12.1266 0.4996 11.3971V9.34114C0.496809 8.61174 0.504144 7.88234 0.521601 7.15314L0.5286 6.95914C0.5366 6.73414 0.5466 6.51314 0.5586 6.24714C0.6086 5.18214 0.7766 4.45714 1.0236 3.81914C1.27471 3.15104 1.66932 2.54616 2.1796 2.04714C2.67869 1.53861 3.28274 1.14513 3.9496 0.894141C4.5876 0.647141 5.3126 0.479141 6.3776 0.429141C6.6436 0.417141 6.8656 0.407141 7.0896 0.399141L7.2836 0.393141C8.01279 0.375373 8.7422 0.367706 9.4716 0.370141L11.5276 0.369141ZM10.4996 5.36914C9.17352 5.36914 7.90175 5.89592 6.96407 6.83361C6.02638 7.77129 5.4996 9.04306 5.4996 10.3691C5.4996 11.6952 6.02638 12.967 6.96407 13.9047C7.90175 14.8424 9.17352 15.3691 10.4996 15.3691C11.8257 15.3691 13.0975 14.8424 14.0351 13.9047C14.9728 12.967 15.4996 11.6952 15.4996 10.3691C15.4996 9.04306 14.9728 7.77129 14.0351 6.83361C13.0975 5.89592 11.8257 5.36914 10.4996 5.36914ZM10.4996 7.36914C10.8936 7.36907 11.2837 7.44661 11.6477 7.59731C12.0117 7.74801 12.3424 7.96894 12.6211 8.24747C12.8997 8.526 13.1207 8.85668 13.2715 9.22063C13.4224 9.58458 13.5 9.97468 13.5001 10.3686C13.5002 10.7626 13.4226 11.1527 13.2719 11.5167C13.1212 11.8807 12.9003 12.2115 12.6218 12.4901C12.3432 12.7687 12.0126 12.9898 11.6486 13.1406C11.2847 13.2914 10.8946 13.3691 10.5006 13.3691C9.70495 13.3691 8.94189 13.0531 8.37928 12.4905C7.81667 11.9279 7.5006 11.1648 7.5006 10.3691C7.5006 9.57349 7.81667 8.81043 8.37928 8.24782C8.94189 7.68521 9.70495 7.36914 10.5006 7.36914M15.7506 3.86914C15.4191 3.86914 15.1011 4.00084 14.8667 4.23526C14.6323 4.46968 14.5006 4.78762 14.5006 5.11914C14.5006 5.45066 14.6323 5.7686 14.8667 6.00302C15.1011 6.23744 15.4191 6.36914 15.7506 6.36914C16.0821 6.36914 16.4001 6.23744 16.6345 6.00302C16.8689 5.7686 17.0006 5.45066 17.0006 5.11914C17.0006 4.78762 16.8689 4.46968 16.6345 4.23526C16.4001 4.00084 16.0821 3.86914 15.7506 3.86914Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a class="footer-link-circle bg-red d-flex justify-content-center align-items-center" href="">
+                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M11.2506 8.92086L18.1 0.958984H16.4769L10.5296 7.87218L5.77948 0.958984H0.300781L7.48388 11.4129L0.300781 19.7622H1.92397L8.20452 12.4616L13.221 19.7622H18.6997L11.2502 8.92086H11.2506ZM2.50881 2.1809H5.00191L16.4777 18.5959H13.9846L2.50881 2.1809Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                        <a class="footer-link-circle bg-red d-flex justify-content-center align-items-center" href="">
+                            <svg width="19" height="20" viewBox="0 0 19 20" fill="none"
+                                xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M2.125 0.0214844C1.56141 0.0214844 1.02091 0.245368 0.622398 0.643883C0.223883 1.0424 0 1.5829 0 2.14648C0 2.71007 0.223883 3.25057 0.622398 3.64909C1.02091 4.0476 1.56141 4.27148 2.125 4.27148C2.68859 4.27148 3.22909 4.0476 3.6276 3.64909C4.02612 3.25057 4.25 2.71007 4.25 2.14648C4.25 1.5829 4.02612 1.0424 3.6276 0.643883C3.22909 0.245368 2.68859 0.0214844 2.125 0.0214844ZM0.125 6.02148C0.0918479 6.02148 0.0600536 6.03465 0.0366116 6.0581C0.0131695 6.08154 0 6.11333 0 6.14648V19.1465C0 19.2155 0.056 19.2715 0.125 19.2715H4.125C4.15815 19.2715 4.18995 19.2583 4.21339 19.2349C4.23683 19.2114 4.25 19.1796 4.25 19.1465V6.14648C4.25 6.11333 4.23683 6.08154 4.21339 6.0581C4.18995 6.03465 4.15815 6.02148 4.125 6.02148H0.125ZM6.625 6.02148C6.59185 6.02148 6.56005 6.03465 6.53661 6.0581C6.51317 6.08154 6.5 6.11333 6.5 6.14648V19.1465C6.5 19.2155 6.556 19.2715 6.625 19.2715H10.625C10.6582 19.2715 10.6899 19.2583 10.7134 19.2349C10.7368 19.2114 10.75 19.1796 10.75 19.1465V12.1465C10.75 11.6492 10.9475 11.1723 11.2992 10.8207C11.6508 10.469 12.1277 10.2715 12.625 10.2715C13.1223 10.2715 13.5992 10.469 13.9508 10.8207C14.3025 11.1723 14.5 11.6492 14.5 12.1465V19.1465C14.5 19.2155 14.556 19.2715 14.625 19.2715H18.625C18.6582 19.2715 18.6899 19.2583 18.7134 19.2349C18.7368 19.2114 18.75 19.1796 18.75 19.1465V10.5265C18.75 8.09948 16.64 6.20148 14.225 6.42048C13.4778 6.4885 12.7459 6.67342 12.056 6.96848L10.75 7.52848V6.14648C10.75 6.11333 10.7368 6.08154 10.7134 6.0581C10.6899 6.03465 10.6582 6.02148 10.625 6.02148H6.625Z"
+                                    fill="white" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-4 d-flex justify-content-start justify-content-sm-center">
+                    <ul class="list-unstyled mb-0">
+                        <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Links</li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Home</a></li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">About Us</a></li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Services</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Showcase</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-6 mb-4 d-flex justify-content-start justify-content-sm-center">
+                    <ul class="list-unstyled mb-0">
+                        <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Legal</li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Terms Of Use</a></li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Privacy Policy</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Cookie Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-sm-4 col-12 mb-4 d-flex justify-content-start justify-content-sm-center">
+                    <ul class="list-unstyled mb-0">
+                        <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Product</li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Take Tour</a></li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Live Chat</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Reveiws</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-4 col-sm-8 col-12 mb-4 d-flex justify-content-start justify-content-sm-start">
+                    <ul class="list-unstyled">
+                        <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Newsletter</li>
+                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Stay up to date</a></li>
+                        <li class="position-relative">
+                            <input class="footer-input font-family-priamry fw-normal fs-6 lh-26 mb-3 mb-sm-0 color-light-grey" type="email" placeholder="Your email ">
+                            <button class="footer-btn position- absolute bg-red border-0 font-family-priamry fw-semibold fs-6 lh-26 text-white">Subscribe</button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="line position-relative"></div>
+        <p class="font-family-primary fw-normal fs-6 lh-25 washed-black text-center py-3 mb-0">Copyright 2025 ceramicsolutions.com all rights reserved</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
