--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </div>
     </section>
     <!--***** Why Choose us *****-->
-    <section class="d-flex justify-content-center align-items-center py-100 bg-light-red">
+    <section class="d-flex justify-content-center align-items-center py-100 bg-light-red mb-140">
         <div class="container max-w-1140">
             <div class="row">
                 <div class="col-lg-7 col-12 mb-5 mb-lg-0 d-flex justify-content-center">
@@ -277,8 +277,71 @@
             </div>
         </div>
     </section>
+    <!--***** How it works *****-->
+    <section class="d-flex justify-content-center align-items-center pb-140">
+        <div class="container max-w-1140">
+            <div class="row flex-column-reverse flex-lg-row">
+                <div class="col-lg-5 col-12 d-flex justify-content-center">
+                    <img src="./assets/images/png/section-5-img.png" alt="section-5-img" class="w-100 max-w-485">
+                </div>
+                <div class="col-lg-7 col-12 mb-5 mb-lg-0">
+                    <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black text-center text-lg-start mb-20">
+                        How it works?</h2>
+                    <div class="d-flex justify-content-center justify-content-lg-start">
+                        <p
+                            class="font-family-primary fw-normal fs-md lh-28 text-black text-center max-w-592 text-lg-start mb-32">
+                            Lörem ipsum koda astrobel: sutaveligen. Rodod bänera viliga. Pregigt primasofi dede
+                            facebooka: förutom tivaligt.</p>
+                    </div>
+                    <div class="d-flex justify-content-center justify-content-lg-start">
+                        <div>
+                            <div class="section-5-card mb-3">
+                                <div class="d-flex align-items-center gap-20 mb-12">
+                                    <img src="./assets/images/svg/section-5-logo.svg" alt="logo">
+                                    <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-0">Contact
+                                        us
+                                    </h3>
+                                </div>
+                                <p class="font-family-primary pl-52 fs-6 lh-25 fw-normal text-black mb-0">Lörem ipsum
+                                    deligen vuprer diar faktigt på dehädiska att sara. Persion. Repp löng
+                                    blippbetalning. Megaliga fadat om än dening</p>
+                            </div>
+                            <div class="section-5-card mb-3">
+                                <div class="d-flex align-items-center gap-20 mb-12">
+                                    <img src="./assets/images/svg/section-5-logo.svg" alt="logo">
+                                    <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-0">Get a
+                                        Qoute
+                                    </h3>
+                                </div>
+                                <p class="font-family-primary pl-52 fs-6 lh-25 fw-normal text-black mb-0">Lörem ipsum
+                                    deligen vuprer diar faktigt på dehädiska att sara. Persion. Repp löng
+                                    blippbetalning. Megaliga fadat om än dening</p>
+                            </div>
+                            <div class="section-5-card mb-36">
+                                <div class="d-flex align-items-center gap-20 mb-12">
+                                    <img src="./assets/images/svg/section-5-logo.svg" alt="logo">
+                                    <h3 class="font-family-primary fw-semibold fs-5 lh-32 color-Vantablack mb-0">Get
+                                        your Work Done</h3>
+                                </div>
+                                <p class="font-family-primary pl-52 fs-6 lh-25 fw-normal text-black mb-0">Lörem ipsum
+                                    deligen vuprer diar faktigt på dehädiska att sara. Persion. Repp löng
+                                    blippbetalning. Megaliga fadat om än dening</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start gap-4">
+                        <button
+                            class="get-btn font-family-primary fw-bold fs-md lh-22 bg-red text-white border-0">Get
+                            a Quote</button>
+                        <button class="view-btn font-family-primary bg-white fw-bold fs-md lh-22 color-red">View Tile
+                            Visualizer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!--***** Our Blog *****-->
-    <section class="d-flex justify-content-center align-items-center py-140">
+    <section class="d-flex justify-content-center align-items-center pb-140">
         <div class="container max-w-1140">
             <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-center text-black mb-20">Our Blog</h2>
             <div class="d-flex justify-content-center">
@@ -492,42 +555,65 @@
                 <div class="col-lg-2 col-sm-4 col-6 mb-4 d-flex justify-content-start justify-content-sm-center">
                     <ul class="list-unstyled mb-0">
                         <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Links</li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Home</a></li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">About Us</a></li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Services</a></li>
-                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Showcase</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Home</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">About Us</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Services</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Showcase</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-4 col-6 mb-4 d-flex justify-content-start justify-content-sm-center">
                     <ul class="list-unstyled mb-0">
                         <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Legal</li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Terms Of Use</a></li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Privacy Policy</a></li>
-                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Cookie Policy</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Terms Of Use</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Privacy Policy</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Cookie Policy</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-sm-4 col-12 mb-4 d-flex justify-content-start justify-content-sm-center">
                     <ul class="list-unstyled mb-0">
                         <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Product</li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Take Tour</a></li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Live Chat</a></li>
-                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Reveiws</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Take Tour</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Live Chat</a></li>
+                        <li><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Reveiws</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-4 col-sm-8 col-12 mb-4 d-flex justify-content-start justify-content-sm-start">
                     <ul class="list-unstyled">
                         <li class="font-family-primary fw-semibold fs-5 lh-32 washed-black mb-20">Newsletter</li>
-                        <li class="mb-12"><a class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black" href="">Stay up to date</a></li>
+                        <li class="mb-12"><a
+                                class="text-decoration-none text-hover font-family-primary fw-normal fs-6 lh-25 washed-black"
+                                href="">Stay up to date</a></li>
                         <li class="position-relative">
-                            <input class="footer-input font-family-priamry fw-normal fs-6 lh-26 mb-3 mb-sm-0 color-light-grey" type="email" placeholder="Your email ">
-                            <button class="footer-btn position- absolute bg-red border-0 font-family-priamry fw-semibold fs-6 lh-26 text-white">Subscribe</button>
+                            <input
+                                class="footer-input font-family-priamry fw-normal fs-6 lh-26 mb-3 mb-sm-0 color-light-grey"
+                                type="email" placeholder="Your email ">
+                            <button
+                                class="footer-btn position- absolute bg-red border-0 font-family-priamry fw-semibold fs-6 lh-26 text-white">Subscribe</button>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="line position-relative"></div>
-        <p class="font-family-primary fw-normal fs-6 lh-25 washed-black text-center py-3 mb-0">Copyright 2025 ceramicsolutions.com all rights reserved</p>
+        <p class="font-family-primary fw-normal fs-6 lh-25 washed-black text-center py-3 mb-0">Copyright 2025
+            ceramicsolutions.com all rights reserved</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
