add target blank on links

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="d-flex gap-4 flex-wrap mb-4">
                 <div class="box box-common-class">
                     <div class="d-flex gap-10 align-items-center">
-                        <a href="https://www.google.co.in/">
+                        <a href="https://www.google.co.in/" target="_blank">
                             <img src="./assets/images/svg/google-img.svg" alt="google-img">
                         </a>
                         <div>
@@ -126,7 +126,7 @@
                 </div>
                 <div class="box-2 box-common-class">
                     <div class="d-flex gap-10 align-items-center">
-                        <a href="https://www.trustpilot.com/">
+                        <a href="https://www.trustpilot.com/" target="_blank">
                             <img src="./assets/images/svg/trust-pilot-img.svg" alt="trust-pilot-img">
                         </a>
                         <div>
@@ -263,7 +263,8 @@
             <div class="d-flex justify-content-center gap-4 flex-wrap">
                 <div class="box box-common-class">
                     <div class="d-flex gap-10 align-items-center">
-                        <a href="https://www.google.co.in/"> <img src="./assets/images/svg/google-img.svg" alt="google-img"></a>
+                        <a href="https://www.google.co.in/" target="_blank"> <img
+                                src="./assets/images/svg/google-img.svg" alt="google-img"></a>
                         <div>
                             <h3 class="font-family-second fw-normal lh-19 fs-sm mb-0 sooty-black">Google Review</h3>
                             <div class="d-flex align-items-center">
@@ -294,8 +295,8 @@
                 </div>
                 <div class="box-2 box-common-class">
                     <div class="d-flex gap-10 align-items-center">
-                        <a href="https://www.trustpilot.com/"> <img src="./assets/images/svg/trust-pilot-img.svg"
-                                alt="trust-pilot-img">
+                        <a href="https://www.trustpilot.com/" target="_blank"> <img
+                                src="./assets/images/svg/trust-pilot-img.svg" alt="trust-pilot-img">
                         </a>
                         <div>
                             <h3 class="font-family-second fw-normal lh-19 fs-sm mb-0 sooty-black">Trust Pilot Review
@@ -643,12 +644,12 @@
             <div class="row">
                 <div class="col-lg-2 col-sm-4 mb-4">
                     <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="mb-20">
-                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-3" href="email:Help@Dealzip.com">
+                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-3" href="mailto:Help@Dealzip.com">
                         <img src="./assets/images/svg/message-img.svg" alt="">
                         <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">Help@Dealzip.com</p>
                     </a>
-                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-4" href="email:Help@Dealzip.com">
-                        <img src="./assets/images/svg/mobile-img.svg" alt="tel:+123445667889">
+                    <a class="d-flex text-decoration-none gap-8 align-items-center mb-4" href="tel:+123445667889">
+                        <img src="./assets/images/svg/mobile-img.svg" alt="">
                         <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">+1 234 456 678 89</p>
                     </a>
                     <div class="d-flex gap-8">
