fill alt of images

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
                         </div>
                     </div>
                 </div>
-                <img src="./assets/images/svg/tile-logo.svg" alt="">
-                <img src="./assets/images/svg/business-award-img.svg" alt="">
+                <img src="./assets/images/svg/tile-logo.svg" alt="tile-logo">
+                <img src="./assets/images/svg/business-award-img.svg" alt="business-award-img">
             </div>
         </div>
     </header>
@@ -645,11 +645,11 @@
                 <div class="col-lg-2 col-sm-4 mb-4">
                     <img src="./assets/images/svg/footer-logo.svg" alt="logo" class="mb-20">
                     <a class="d-flex text-decoration-none gap-8 align-items-center mb-3" href="mailto:Help@Dealzip.com">
-                        <img src="./assets/images/svg/message-img.svg" alt="">
+                        <img src="./assets/images/svg/message-img.svg" alt="message-img">
                         <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">Help@Dealzip.com</p>
                     </a>
                     <a class="d-flex text-decoration-none gap-8 align-items-center mb-4" href="tel:+123445667889">
-                        <img src="./assets/images/svg/mobile-img.svg" alt="">
+                        <img src="./assets/images/svg/mobile-img.svg" alt="mobile-img">
                         <p class="font-family-primary fw-normal fs-6 lh-25 washed-black mb-0">+1 234 456 678 89</p>
                     </a>
                     <div class="d-flex gap-8">
