manage spacing in how it woks section

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 <div class="col-lg-5 col-12 d-flex justify-content-center">
                     <img src="./assets/images/png/section-5-img.png" alt="section-5-img" class="w-100 max-w-485">
                 </div>
-                <div class="col-lg-7 col-12 mb-5 mb-lg-0">
+                <div class="col-lg-7 col-12 mb-5 mb-lg-0 pl-51">
                     <h2 class="font-family-primary fw-semibold fs-lg lh-70 text-black text-center text-lg-start mb-20">
                         How it works?</h2>
                     <div class="d-flex justify-content-center justify-content-lg-start">
